# serializer version: 1
# name: test_SwinIR_L_4x
  ImageModelDescriptor(
    architecture='SwinIR',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'large',
      's64w8',
      '64nf',
      '240dim',
      '3conv',
    ]),
  )
# ---
# name: test_SwinIR_M_s48w8_4x
  ImageModelDescriptor(
    architecture='SwinIR',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's48w8',
      '64nf',
      '180dim',
      '1conv',
    ]),
  )
# ---
# name: test_SwinIR_M_s64w8_2x
  ImageModelDescriptor(
    architecture='SwinIR',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w8',
      '64nf',
      '180dim',
      '1conv',
    ]),
  )
# ---
# name: test_SwinIR_S_2x
  ImageModelDescriptor(
    architecture='SwinIR',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w8',
      '64nf',
      '60dim',
      '1conv',
    ]),
  )
# ---
